# AAUSAT6-C-

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  build.sh  entrypoint.sh  run.sh
.github/workflows/: build.yaml
src/: Fast.cpp  brisk.cpp  interfaces.h  main.cpp  orb.cpp
src/Cropping/: StubCropper.cpp  StubCropper.h
src/FeatureDetection/: BriskDetector.cpp  BriskDetector.h  FastDetector.cpp  FastDetector.h  ORBDetector.cpp  ORBDetector.h  StubDetector.cpp  StubDetector.h
src/Gstreamer/: gstreamervideo.cpp  gstreamervideo.h
src/ObjectDetection/: BriskDetector.cpp  BriskDetector.h  FastDetector.cpp  FastDetector.h  ORBDetector.cpp  ORBDetector.h  StubDetector.cpp  StubDetector.h
src/Stabilization/: EdRansacStabilizer.cpp  EdRansacStabilizer.h  OFStabilizer.cpp  OFStabilizer.h  Stabilizer.cpp  Stabilizer.h  StubStabilizer.cpp  StubStabilizer.h
src/VideoInputStream/: gstreamervideo.cpp  gstreamervideo.h
src/VideoOutputStream/: GstreamerFileOutput.cpp  GstreamerFileOutput.h  OpenCVWindowOutput.cpp  OpenCVWindowOutput.h
